white backgrouund on small screen fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background: linear-gradient(
+  background-image: linear-gradient(
     133.99deg,
     #092537 -7.04%,
     #0067ad -7.04%,
@@ -47,13 +47,6 @@ body {
     padding-bottom: 20px;
   }
 }
-
-@media only screen and (max-width: 767px) {
-  body {
-    background-attachment: unset;
-  }
-}
-
 a {
   text-decoration: none;
 }
